[gd_scene load_steps=16 format=3 uid="uid://5wdvifwdiyig"]

[ext_resource type="Script" uid="uid://bj3etx0uc3b1t" path="res://scenes/messages_screen.gd" id="1_qu8al"]
[ext_resource type="Texture2D" uid="uid://bh0ii57sl4erb" path="res://scenes/8852667.jpg" id="2_qk12n"]
[ext_resource type="Theme" uid="uid://ceib3ahvc5st5" path="res://themes/theme1.tres" id="3_0a0xl"]
[ext_resource type="Script" uid="uid://dakvilus8i5ep" path="res://scenes/to3d.gd" id="4_18c41"]
[ext_resource type="FontFile" uid="uid://d3pf6sdbn32rp" path="res://sprites/fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf" id="4_qk12n"]
[ext_resource type="Texture2D" uid="uid://cxm03dgq3l10a" path="res://images/2025_08_19_0zb_Kleki.png" id="5_jidah"]
[ext_resource type="Texture2D" uid="uid://btecui7tiaa8e" path="res://images/2025_08_19_0zm_Kleki.png" id="6_wcya2"]
[ext_resource type="Texture2D" uid="uid://vfkf0puwg0xb" path="res://images/2025_08_19_0yt_Kleki.png" id="7_06ssc"]
[ext_resource type="Texture2D" uid="uid://bexuqsfsu4nng" path="res://images/2025_08_19_0yu_Kleki.png" id="8_xh41c"]
[ext_resource type="Texture2D" uid="uid://c7qx6t5gqglkn" path="res://images/2025_08_19_0yu_Kleki (1).png" id="9_rjx67"]
[ext_resource type="Texture2D" uid="uid://bajmsn6t2ox11" path="res://images/2025_08_19_0yv_Kleki.png" id="10_cg8ec"]
[ext_resource type="FontFile" uid="uid://cu4tiafnexoab" path="res://sprites/fonts/Roboto_Mono/static/RobotoMono-Medium.ttf" id="12_ryjn4"]
[ext_resource type="AudioStream" uid="uid://dj2hbc8fa1b3u" path="res://images/new-notification-09-352705.mp3" id="13_qn6s4"]
[ext_resource type="Texture2D" uid="uid://cgtgu1a6n36hv" path="res://sprites/images/Art5.png" id="14_qk12n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6eqy8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_06ssc")
}, {
"duration": 1.0,
"texture": ExtResource("8_xh41c")
}, {
"duration": 1.0,
"texture": ExtResource("9_rjx67")
}, {
"duration": 1.0,
"texture": ExtResource("10_cg8ec")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="messages_screen" type="Node2D"]
script = ExtResource("1_qu8al")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(646, 374)
scale = Vector2(1.0625, 0.973437)
texture = ExtResource("2_qk12n")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 16.0
offset_top = 120.0
offset_right = 1264.0
offset_bottom = 704.0
color = Color(1, 0, 1, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 1416.0
offset_top = 32.0
offset_right = 1608.0
offset_bottom = 106.0
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="."]
offset_left = 1028.0
offset_top = 36.0
offset_right = 1212.0
offset_bottom = 100.0
theme = ExtResource("3_0a0xl")
theme_override_fonts/font = ExtResource("4_qk12n")
theme_override_font_sizes/font_size = 20
text = "posts "
script = ExtResource("4_18c41")

[node name="probably wont be used" type="Node2D" parent="."]

[node name="blue1" type="Sprite2D" parent="probably wont be used"]
visible = false
position = Vector2(472, 328)
scale = Vector2(0.624649, 0.655611)
texture = ExtResource("5_jidah")

[node name="pink1" type="Sprite2D" parent="probably wont be used"]
visible = false
position = Vector2(416, 392)
scale = Vector2(0.624649, 0.655611)
texture = ExtResource("6_wcya2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="probably wont be used"]
visible = false
position = Vector2(816, -128)
scale = Vector2(0.210945, 0.221401)
sprite_frames = SubResource("SpriteFrames_6eqy8")
frame_progress = 0.896012

[node name="interface" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="interface"]
offset_left = 24.0
offset_top = 128.0
offset_right = 384.0
offset_bottom = 696.0
color = Color(1, 0.578113, 0.984983, 1)

[node name="ColorRect7" type="ColorRect" parent="interface"]
offset_left = 24.0
offset_top = 128.0
offset_right = 384.0
offset_bottom = 696.0
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="ColorRect3" type="ColorRect" parent="interface"]
offset_left = 32.0
offset_top = 136.0
offset_right = 376.0
offset_bottom = 240.0
color = Color(0.823529, 0.988235, 0.988235, 1)

[node name="ColorRect4" type="ColorRect" parent="interface"]
offset_left = 32.0
offset_top = 248.0
offset_right = 376.0
offset_bottom = 352.0
color = Color(0.986752, 0.986752, 0.986752, 1)

[node name="ColorRect5" type="ColorRect" parent="interface"]
offset_left = 32.0
offset_top = 360.0
offset_right = 376.0
offset_bottom = 464.0
color = Color(0.986752, 0.986752, 0.986752, 1)

[node name="ColorRect6" type="ColorRect" parent="interface"]
offset_left = 32.0
offset_top = 472.0
offset_right = 376.0
offset_bottom = 576.0
color = Color(0.986752, 0.986752, 0.986752, 1)

[node name="ColorRect8" type="ColorRect" parent="interface"]
offset_left = 392.0
offset_top = 128.0
offset_right = 1256.0
offset_bottom = 696.0

[node name="ColorRect10" type="ColorRect" parent="interface"]
offset_left = 392.0
offset_top = 600.0
offset_right = 1256.0
offset_bottom = 696.0
color = Color(1, 0, 1, 1)

[node name="ColorRect9" type="ColorRect" parent="interface"]
offset_left = 392.0
offset_top = 608.0
offset_right = 1256.0
offset_bottom = 696.0
color = Color(0.929024, 0.885273, 0.95705, 1)

[node name="ColorRect13" type="ColorRect" parent="interface"]
offset_left = 48.0
offset_top = 488.0
offset_right = 120.0
offset_bottom = 560.0
color = Color(0.43134, 0.43134, 0.43134, 1)

[node name="ColorRect" type="ColorRect" parent="interface"]
offset_left = 48.0
offset_top = 152.0
offset_right = 120.0
offset_bottom = 224.0
color = Color(0.43134, 0.43134, 0.43134, 1)

[node name="ColorRect14" type="ColorRect" parent="interface"]
offset_left = 48.0
offset_top = 376.0
offset_right = 120.0
offset_bottom = 448.0
color = Color(0.43134, 0.43134, 0.43134, 1)

[node name="ColorRect12" type="ColorRect" parent="interface"]
offset_left = 48.0
offset_top = 264.0
offset_right = 120.0
offset_bottom = 336.0
color = Color(0.43134, 0.43134, 0.43134, 1)

[node name="ColorRect15" type="ColorRect" parent="interface"]
offset_left = 330.0
offset_top = 36.0
offset_right = 950.0
offset_bottom = 102.0
color = Color(0, 0, 0, 1)

[node name="ColorRect11" type="ColorRect" parent="interface"]
offset_left = 334.0
offset_top = 40.0
offset_right = 946.0
offset_bottom = 98.0
color = Color(1, 0, 1, 1)

[node name="contacts" type="Node2D" parent="interface"]

[node name="RichTextLabel3" type="RichTextLabel" parent="interface/contacts"]
offset_left = 160.0
offset_top = 136.0
offset_right = 2320.0
offset_bottom = 1176.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_qk12n")
theme_override_font_sizes/normal_font_size = 400
text = "Unknown"
vertical_alignment = 1

[node name="RichTextLabel5" type="RichTextLabel" parent="interface/contacts"]
offset_left = 160.0
offset_top = 472.0
offset_right = 2320.0
offset_bottom = 1512.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_qk12n")
theme_override_font_sizes/normal_font_size = 400
text = "noah"
vertical_alignment = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="interface/contacts"]
offset_left = 160.0
offset_top = 360.0
offset_right = 2320.0
offset_bottom = 1400.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_qk12n")
theme_override_font_sizes/normal_font_size = 400
text = "emma!"
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="interface/contacts"]
offset_left = 160.0
offset_top = 248.0
offset_right = 2320.0
offset_bottom = 1288.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_qk12n")
theme_override_font_sizes/normal_font_size = 400
text = "daisy"
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="interface/contacts"]
offset_left = 332.0
offset_top = 27.0
offset_right = 6412.0
offset_bottom = 747.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_qk12n")
theme_override_font_sizes/normal_font_size = 500
text = "private messages"
horizontal_alignment = 1
vertical_alignment = 1

[node name="unknown6" type="RichTextLabel" parent="interface"]
offset_left = 2000.0
offset_top = 480.0
offset_right = 8400.0
offset_bottom = 1440.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("12_ryjn4")
theme_override_font_sizes/normal_font_size = 180
bbcode_enabled = true
text = "[font_size=200][color=blue]Unknown: [color=black][font_size=180]you have 24 hours"
vertical_alignment = 1

[node name="unknown4" type="RichTextLabel" parent="interface"]
offset_left = 2000.0
offset_top = 328.0
offset_right = 7920.0
offset_bottom = 1288.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("12_ryjn4")
theme_override_font_sizes/normal_font_size = 180
text = "don't ignore me"
vertical_alignment = 1

[node name="unknown5" type="RichTextLabel" parent="interface"]
offset_left = 2000.0
offset_top = 368.0
offset_right = 7920.0
offset_bottom = 1328.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("12_ryjn4")
theme_override_font_sizes/normal_font_size = 180
bbcode_enabled = true
text = "[font_size=180]you won't like what happens"
vertical_alignment = 1

[node name="unknown3" type="RichTextLabel" parent="interface"]
offset_left = 2000.0
offset_top = 288.0
offset_right = 7920.0
offset_bottom = 1248.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("12_ryjn4")
theme_override_font_sizes/normal_font_size = 180
text = "that's where you live right? "
vertical_alignment = 1

[node name="me2" type="RichTextLabel" parent="interface"]
offset_left = 2000.0
offset_top = 424.0
offset_right = 6400.0
offset_bottom = 1384.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("12_ryjn4")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "Me: [color=black][font_size=180]why are you doing this [color=black]"
vertical_alignment = 1

[node name="me1" type="RichTextLabel" parent="interface"]
offset_left = 2000.0
offset_top = 192.0
offset_right = 5680.0
offset_bottom = 1152.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("12_ryjn4")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "Me: [color=black][font_size=180]thank u!!:3[color=black]"
vertical_alignment = 1

[node name="unknown2" type="RichTextLabel" parent="interface"]
offset_left = 2000.0
offset_top = 248.0
offset_right = 6960.0
offset_bottom = 1208.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 1, 1)
theme_override_fonts/normal_font = ExtResource("12_ryjn4")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "Unknown: [color=black][font_size=180]1092 atraer street.[color=black]"
vertical_alignment = 1

[node name="unknown1" type="RichTextLabel" parent="interface"]
offset_left = 416.0
offset_top = 136.0
offset_right = 6576.0
offset_bottom = 1096.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 1, 1)
theme_override_fonts/normal_font = ExtResource("12_ryjn4")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "Unknown: [color=black][font_size=180]I liked your post today[color=black] "
vertical_alignment = 1

[node name="typemsg" type="RichTextLabel" parent="interface"]
offset_left = 424.0
offset_top = 608.0
offset_right = 8744.0
offset_bottom = 1488.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0.359069, 0.359069, 0.359069, 1)
theme_override_fonts/normal_font = ExtResource("12_ryjn4")
theme_override_font_sizes/normal_font_size = 250
text = "type your message..."
vertical_alignment = 1

[node name="notification" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_qn6s4")

[node name="profiles" type="Node2D" parent="."]

[node name="profile1" type="Sprite2D" parent="profiles"]
position = Vector2(84, 188)
scale = Vector2(0.0351563, 0.0351562)
texture = ExtResource("14_qk12n")

[node name="profile2" type="Sprite2D" parent="profiles"]
position = Vector2(84, 300)
scale = Vector2(0.0351563, 0.0351562)
texture = ExtResource("14_qk12n")

[node name="profile3" type="Sprite2D" parent="profiles"]
position = Vector2(84, 412)
scale = Vector2(0.0351563, 0.0351563)
texture = ExtResource("14_qk12n")

[node name="profile4" type="Sprite2D" parent="profiles"]
position = Vector2(84, 524)
scale = Vector2(0.0351563, 0.0351563)
texture = ExtResource("14_qk12n")
